--- a/AdventOfCode2020/Day1/Day1.vcxproj
+++ b/AdventOfCode2020/Day1/Day1.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{2dd5721c-2ff4-40dd-becc-c177d1852852}</ProjectGuid>
     <RootNamespace>Day1</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Day01</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
