--- a/AdventOfCode2020/Day2/Day2.vcxproj
+++ b/AdventOfCode2020/Day2/Day2.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{90e8f87d-ba9a-40f9-842e-0a6e49e166ba}</ProjectGuid>
     <RootNamespace>Day2</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Day02</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
