--- a/AdventOfCode2020/Day3/Day3.vcxproj
+++ b/AdventOfCode2020/Day3/Day3.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{194d36e8-b4cd-40e2-86c1-d02062e0442b}</ProjectGuid>
     <RootNamespace>Day3</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Day03</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
