--- a/AdventOfCode2020/Day5/Day5.vcxproj
+++ b/AdventOfCode2020/Day5/Day5.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{22a30e93-066d-49c5-bda8-c227e042fea0}</ProjectGuid>
     <RootNamespace>Day5</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Day05</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
