--- a/AdventOfCode2020/Day6/Day6.vcxproj
+++ b/AdventOfCode2020/Day6/Day6.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{11a77916-8044-4e61-96ee-a23ac2781788}</ProjectGuid>
     <RootNamespace>Day6</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Day06</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
