--- a/AdventOfCode2020/Day8/Day8.vcxproj
+++ b/AdventOfCode2020/Day8/Day8.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{9f62cb2b-b08d-425d-8d31-c72f934edf48}</ProjectGuid>
     <RootNamespace>Day8</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Day08</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
