--- a/AdventOfCode2020/Day9/Day9.vcxproj
+++ b/AdventOfCode2020/Day9/Day9.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{90950cec-7daa-4fae-b60e-1574910cf6d0}</ProjectGuid>
     <RootNamespace>Day9</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Day09</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
